25.4.1/_sources/api/index.rst.txt
.. _apireferencelanding:

.. THIS FILE IS GENERATED AUTOMATICALLY, PLEASE DO NOT MODIFY

API Reference
=============

On this page, you will find the ``pyagentspec`` API reference, ordered by component.

Click on the components and section names to acccess the complete API documentation pages.


:doc:`Components <components>`
------------------------------

**Classes**


============================================== ==================================================

:class:`pyagentspec.component.Component`       :docstring:`pyagentspec.component.Component`

:class:`pyagentspec.component.ComponentWithIO` :docstring:`pyagentspec.component.ComponentWithIO`

============================================== ==================================================

:doc:`Agents <agent>`
---------------------

**Classes**


================================ ====================================

:class:`pyagentspec.agent.Agent` :docstring:`pyagentspec.agent.Agent`

================================ ====================================

:doc:`Remote Agents <remoteagent>`
----------------------------------

**Classes**


============================================ ================================================

:class:`pyagentspec.remoteagent.RemoteAgent` :docstring:`pyagentspec.remoteagent.RemoteAgent`

:class:`pyagentspec.ociagent.OciAgent`       :docstring:`pyagentspec.ociagent.OciAgent`

============================================ ================================================

:doc:`Flows & Nodes <flows>`
----------------------------

**Classes**


================================================================================================================ ========================================================================

:class:`pyagentspec.flows.flow.Flow`                                                                             :docstring:`pyagentspec.flows.flow.Flow`

:class:`pyagentspec.flows.node.Node`                                                                             :docstring:`pyagentspec.flows.node.Node`

:class:`pyagentspec.flows.edges.DataFlowEdge <pyagentspec.flows.edges.dataflowedge.DataFlowEdge>`                :docstring:`pyagentspec.flows.edges.dataflowedge.DataFlowEdge`

:class:`pyagentspec.flows.edges.ControlFlowEdge <pyagentspec.flows.edges.controlflowedge.ControlFlowEdge>`       :docstring:`pyagentspec.flows.edges.controlflowedge.ControlFlowEdge`

:class:`pyagentspec.flows.nodes.AgentNode <pyagentspec.flows.nodes.agentnode.AgentNode>`                         :docstring:`pyagentspec.flows.nodes.agentnode.AgentNode`

:class:`pyagentspec.flows.nodes.ApiNode <pyagentspec.flows.nodes.apinode.ApiNode>`                               :docstring:`pyagentspec.flows.nodes.apinode.ApiNode`

:class:`pyagentspec.flows.nodes.BranchingNode <pyagentspec.flows.nodes.branchingnode.BranchingNode>`             :docstring:`pyagentspec.flows.nodes.branchingnode.BranchingNode`

:class:`pyagentspec.flows.nodes.EndNode <pyagentspec.flows.nodes.endnode.EndNode>`                               :docstring:`pyagentspec.flows.nodes.endnode.EndNode`

:class:`pyagentspec.flows.nodes.FlowNode <pyagentspec.flows.nodes.flownode.FlowNode>`                            :docstring:`pyagentspec.flows.nodes.flownode.FlowNode`

:class:`pyagentspec.flows.nodes.InputMessageNode <pyagentspec.flows.nodes.inputmessagenode.InputMessageNode>`    :docstring:`pyagentspec.flows.nodes.inputmessagenode.InputMessageNode`

:class:`pyagentspec.flows.nodes.LlmNode <pyagentspec.flows.nodes.llmnode.LlmNode>`                               :docstring:`pyagentspec.flows.nodes.llmnode.LlmNode`

:class:`pyagentspec.flows.nodes.MapNode <pyagentspec.flows.nodes.mapnode.MapNode>`                               :docstring:`pyagentspec.flows.nodes.mapnode.MapNode`

:class:`pyagentspec.flows.nodes.OutputMessageNode <pyagentspec.flows.nodes.outputmessagenode.OutputMessageNode>` :docstring:`pyagentspec.flows.nodes.outputmessagenode.OutputMessageNode`

:class:`pyagentspec.flows.nodes.StartNode <pyagentspec.flows.nodes.startnode.StartNode>`                         :docstring:`pyagentspec.flows.nodes.startnode.StartNode`

:class:`pyagentspec.flows.nodes.ToolNode <pyagentspec.flows.nodes.toolnode.ToolNode>`                            :docstring:`pyagentspec.flows.nodes.toolnode.ToolNode`

================================================================================================================ ========================================================================

:doc:`LLMs <llmmodels>`
-----------------------

**Classes**


====================================================================================================================================== ==================================================================================

:class:`pyagentspec.llms.LlmConfig <pyagentspec.llms.llmconfig.LlmConfig>`                                                             :docstring:`pyagentspec.llms.llmconfig.LlmConfig`

:class:`pyagentspec.llms.LlmGenerationConfig <pyagentspec.llms.llmgenerationconfig.LlmGenerationConfig>`                               :docstring:`pyagentspec.llms.llmgenerationconfig.LlmGenerationConfig`

:class:`pyagentspec.llms.VllmConfig <pyagentspec.llms.vllmconfig.VllmConfig>`                                                          :docstring:`pyagentspec.llms.vllmconfig.VllmConfig`

:class:`pyagentspec.llms.OllamaConfig <pyagentspec.llms.ollamaconfig.OllamaConfig>`                                                    :docstring:`pyagentspec.llms.ollamaconfig.OllamaConfig`

:class:`pyagentspec.llms.OciGenAiConfig <pyagentspec.llms.ocigenaiconfig.OciGenAiConfig>`                                              :docstring:`pyagentspec.llms.ocigenaiconfig.OciGenAiConfig`

:class:`pyagentspec.llms.OciClientConfig <pyagentspec.llms.ociclientconfig.OciClientConfig>`                                           :docstring:`pyagentspec.llms.ociclientconfig.OciClientConfig`

:class:`pyagentspec.llms.OciClientConfigWithApiKey <pyagentspec.llms.ociclientconfig.OciClientConfigWithApiKey>`                       :docstring:`pyagentspec.llms.ociclientconfig.OciClientConfigWithApiKey`

:class:`pyagentspec.llms.OciClientConfigWithSecurityToken <pyagentspec.llms.ociclientconfig.OciClientConfigWithSecurityToken>`         :docstring:`pyagentspec.llms.ociclientconfig.OciClientConfigWithSecurityToken`

:class:`pyagentspec.llms.OciClientConfigWithInstancePrincipal <pyagentspec.llms.ociclientconfig.OciClientConfigWithInstancePrincipal>` :docstring:`pyagentspec.llms.ociclientconfig.OciClientConfigWithInstancePrincipal`

:class:`pyagentspec.llms.OciClientConfigWithResourcePrincipal <pyagentspec.llms.ociclientconfig.OciClientConfigWithResourcePrincipal>` :docstring:`pyagentspec.llms.ociclientconfig.OciClientConfigWithResourcePrincipal`

:class:`pyagentspec.llms.OpenAiCompatibleConfig <pyagentspec.llms.openaicompatibleconfig.OpenAiCompatibleConfig>`                      :docstring:`pyagentspec.llms.openaicompatibleconfig.OpenAiCompatibleConfig`

:class:`pyagentspec.llms.OpenAiConfig <pyagentspec.llms.openaiconfig.OpenAiConfig>`                                                    :docstring:`pyagentspec.llms.openaiconfig.OpenAiConfig`

====================================================================================================================================== ==================================================================================

:doc:`Tools <tools>`
--------------------

**Classes**


=============================================================================== ====================================================

:class:`pyagentspec.tools.Tool <pyagentspec.tools.tool.Tool>`                   :docstring:`pyagentspec.tools.tool.Tool`

:class:`pyagentspec.tools.ClientTool <pyagentspec.tools.clienttool.ClientTool>` :docstring:`pyagentspec.tools.clienttool.ClientTool`

:class:`pyagentspec.tools.RemoteTool <pyagentspec.tools.remotetool.RemoteTool>` :docstring:`pyagentspec.tools.remotetool.RemoteTool`

:class:`pyagentspec.tools.ServerTool <pyagentspec.tools.servertool.ServerTool>` :docstring:`pyagentspec.tools.servertool.ServerTool`

:class:`pyagentspec.mcp.MCPTool <pyagentspec.mcp.tools.MCPTool>`                :docstring:`pyagentspec.mcp.tools.MCPTool`

=============================================================================== ====================================================

:doc:`IO Properties <ioproperties>`
-----------------------------------

**Classes**


============================================= =================================================

:class:`pyagentspec.property.Property`        :docstring:`pyagentspec.property.Property`

:class:`pyagentspec.property.StringProperty`  :docstring:`pyagentspec.property.StringProperty`

:class:`pyagentspec.property.BooleanProperty` :docstring:`pyagentspec.property.BooleanProperty`

:class:`pyagentspec.property.IntegerProperty` :docstring:`pyagentspec.property.IntegerProperty`

:class:`pyagentspec.property.FloatProperty`   :docstring:`pyagentspec.property.FloatProperty`

:class:`pyagentspec.property.NumberProperty`  :docstring:`pyagentspec.property.NumberProperty`

:class:`pyagentspec.property.NullProperty`    :docstring:`pyagentspec.property.NullProperty`

:class:`pyagentspec.property.UnionProperty`   :docstring:`pyagentspec.property.UnionProperty`

:class:`pyagentspec.property.ListProperty`    :docstring:`pyagentspec.property.ListProperty`

:class:`pyagentspec.property.DictProperty`    :docstring:`pyagentspec.property.DictProperty`

:class:`pyagentspec.property.ObjectProperty`  :docstring:`pyagentspec.property.ObjectProperty`

============================================= =================================================

:doc:`MCP <mcp>`
----------------

**Classes**


================================================================================================================== ========================================================================

:class:`pyagentspec.mcp.SessionParameters <pyagentspec.mcp.clienttransport.SessionParameters>`                     :docstring:`pyagentspec.mcp.clienttransport.SessionParameters`

:class:`pyagentspec.mcp.StdioTransport <pyagentspec.mcp.clienttransport.StdioTransport>`                           :docstring:`pyagentspec.mcp.clienttransport.StdioTransport`

:class:`pyagentspec.mcp.SSETransport <pyagentspec.mcp.clienttransport.SSETransport>`                               :docstring:`pyagentspec.mcp.clienttransport.SSETransport`

:class:`pyagentspec.mcp.SSEmTLSTransport <pyagentspec.mcp.clienttransport.SSEmTLSTransport>`                       :docstring:`pyagentspec.mcp.clienttransport.SSEmTLSTransport`

:class:`pyagentspec.mcp.StreamableHTTPmTLSTransport <pyagentspec.mcp.clienttransport.StreamableHTTPmTLSTransport>` :docstring:`pyagentspec.mcp.clienttransport.StreamableHTTPmTLSTransport`

:class:`pyagentspec.mcp.StreamableHTTPTransport <pyagentspec.mcp.clienttransport.StreamableHTTPTransport>`         :docstring:`pyagentspec.mcp.clienttransport.StreamableHTTPTransport`

:class:`pyagentspec.mcp.MCPTool <pyagentspec.mcp.tools.MCPTool>`                                                   :docstring:`pyagentspec.mcp.tools.MCPTool`

================================================================================================================== ========================================================================

:doc:`Serialization / Deserialization <serialization>`
------------------------------------------------------

**Classes**


========================================================================================================================================================================== ===========================================================================================================

:class:`pyagentspec.serialization.AgentSpecSerializer <pyagentspec.serialization.serializer.AgentSpecSerializer>`                                                          :docstring:`pyagentspec.serialization.serializer.AgentSpecSerializer`

:class:`pyagentspec.serialization.AgentSpecDeserializer <pyagentspec.serialization.deserializer.AgentSpecDeserializer>`                                                    :docstring:`pyagentspec.serialization.deserializer.AgentSpecDeserializer`

:class:`pyagentspec.serialization.SerializationContext <pyagentspec.serialization.serializationcontext.SerializationContext>`                                              :docstring:`pyagentspec.serialization.serializationcontext.SerializationContext`

:class:`pyagentspec.serialization.ComponentSerializationPlugin <pyagentspec.serialization.serializationplugin.ComponentSerializationPlugin>`                               :docstring:`pyagentspec.serialization.serializationplugin.ComponentSerializationPlugin`

:class:`pyagentspec.serialization.PydanticComponentSerializationPlugin <pyagentspec.serialization.pydanticserializationplugin.PydanticComponentSerializationPlugin>`       :docstring:`pyagentspec.serialization.pydanticserializationplugin.PydanticComponentSerializationPlugin`

:class:`pyagentspec.serialization.DeserializationContext <pyagentspec.serialization.deserializationcontext.DeserializationContext>`                                        :docstring:`pyagentspec.serialization.deserializationcontext.DeserializationContext`

:class:`pyagentspec.serialization.ComponentDeserializationPlugin <pyagentspec.serialization.deserializationplugin.ComponentDeserializationPlugin>`                         :docstring:`pyagentspec.serialization.deserializationplugin.ComponentDeserializationPlugin`

:class:`pyagentspec.serialization.PydanticComponentDeserializationPlugin <pyagentspec.serialization.pydanticdeserializationplugin.PydanticComponentDeserializationPlugin>` :docstring:`pyagentspec.serialization.pydanticdeserializationplugin.PydanticComponentDeserializationPlugin`

========================================================================================================================================================================== ===========================================================================================================


.. toctree::
   :maxdepth: 2
   :hidden:

   Components <components>
   Agents <agent>
   Remote Agents <remoteagent>
   Flows & Nodes <flows>
   LLMs <llmmodels>
   Tools <tools>
   IO Properties <ioproperties>
   MCP <mcp>
   Serialization / Deserialization <serialization>